# SolanaAggregator

./: .env  Cargo.toml  README.md
src/: aggregator.rs  api.rs  lib.rs  main.rs  models.rs  solana_client.rs
tests/: api_tests.rs
