[package]
name = "solana_data_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
#Async runtime
tokio = { version = "1", features = ["full"] }

solana-client = "1.18.3"
solana-sdk = "1.18.3"

axum = "0.7"

# Json Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenv = "0.15"
chrono = "0.4"
storage = "0.5.0"
axum-server = "0.7.2"
warp = "0.3"
log = "0.4"
env_logger = "0.10"

#HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Testing
mockito = "0.30"     
mockall = "0.11.2"

[lib]
name = "solana_data_aggregator"
path = "src/lib.rs"
